--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
     <link rel="stylesheet" href="./style/aboutMe.css">
     <link rel="stylesheet" href="./style/concerts.css">
     <link rel="stylesheet" href="./style/projects.css">
+    <link rel="stylesheet" href="./style/contact.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/0233149bfc.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <nav class="navigation">
-        <a href="#" class="navigation__logo">Paweł Odoszewski</a>
+        <p class="sectionMain">Paweł Odoszewski</p>
         <ul class="navigation__list">
-            <li>O mnie</li>
-            <li>Pieśni Wielkanocne</li>
-            <li>Nagrania</li>
-            <li>Kontakt</li>
+            <li class="sectionAboutMe">O mnie</li>
+            <li class="sectionConcerts">Koncerty</li>
+            <li class="sectionProjects">Nagrania</li>
+            <li class="sectionContact">Kontakt</li>
         </ul>
     </nav>
     <button class="hamburger">
@@ -30,13 +31,22 @@
             <span class="hamburger__inner"></span>
         </span>
     </button>
-    <section class="mainPage">
+    <div class="mobileNavigation">
+        <ul>
+            <li id="mainPageNavigation" class="sectionMain">Paweł Odoszewski</li>
+            <li id="aboutMeNavigation" class="sectionAboutMe">O mnie</li>
+            <li id="concertsNavigation" class="sectionConcerts">Koncerty</li>
+            <li id="recordsNavigation" class="sectionProjects">Nagrania</li>
+            <li id="contactNavigation" class="sectionContact">Kontakt</li>
+        </ul>
+    </div>
+    <section id='sectionMain' class="mainPage">
         <div class="header">
             <h1 class="header__name">Paweł Odoszewski</h1>
             <h3 class="header__description">pianista | kompozytor | aranżer | producent</h3>
         </div>
     </section>
-    <section class="aboutMe">
+    <section id="sectionAboutMe" class="aboutMe">
         <h1 class="aboutMe__header">O mnie</h1>
         <img class="aboutMe__photo" src="aboutMePhoto.jpg" alt="aboutMePhoto" />
         <p class="aboutMe__paragraf">Paweł Odoszewski urodził się 12. maja 1995 r. w Łosicach. Absolwent wydziału Jazzu
@@ -85,7 +95,7 @@
         </p>
     </section>
 
-    <section class="concertSection">
+    <section id="sectionConcerts" class="concertSection">
         <div class="concerts">
             <h1 class="concerts__header">Koncerty</h1>
             <div class="concerts__nearlest">
@@ -148,7 +158,7 @@
             </div>
         </div>
     </section>
-    <section class="projects">
+    <section id="sectionProjects" class="projects">
         <h1 class="projects__header">Nagrania</h1>
         <div class="project">
             <img src="Roxie.PNG" alt="roxie" class="project__photo" />
@@ -172,11 +182,52 @@
             <a href="#" class="project__link"><i class="fab fa-youtube"></i>YouTube</a>
         </div>
         <div class="project">
-            <img src="Druga.PNG" alt="roxie" class="project__photo" />
-            <h2 class="project__title">Eurovision Junior 2019</br>Life is a Game</h2>
+            <img src="Czwarty.PNG" alt="roxie" class="project__photo" />
+            <h2 class="project__title">MoowMi Janek - Widzę Cię znów</h2>
             <p class="project__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, nemo
                 distinctio veritatis aliquid amet ipsam voluptate quod non dolores facilis.</p>
             <a href="#" class="project__link"><i class="fab fa-youtube"></i>YouTube</a>
+        </div>
+        <div class="project">
+            <img src="Piate.PNG" alt="roxie" class="project__photo" />
+            <h2 class="project__title">Roxie - Cisza</h2>
+            <p class="project__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, nemo
+                distinctio veritatis aliquid amet ipsam voluptate quod non dolores facilis.</p>
+            <a href="#" class="project__link"><i class="fab fa-youtube"></i>YouTube</a>
+        </div>
+        <div class="project">
+            <img src="Szesc.PNG" alt="roxie" class="project__photo" />
+            <h2 class="project__title">Hubert Jablonski - There's Nothing Holdin' Me Back</h2>
+            <p class="project__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, nemo
+                distinctio veritatis aliquid amet ipsam voluptate quod non dolores facilis.</p>
+            <a href="#" class="project__link"><i class="fab fa-youtube"></i>YouTube</a>
+        </div>
+        <p class="projects__information">
+            Sprawdz więcej moich produkcji na <a href="#">oficjalnej playliscie</a>.
+        </p>
+    </section>
+    <section id="sectionContact" class="contactSection">
+        <div class="contact">
+            <h1 class="contact__header">Kontakt</h1>
+            <div class="contact__ways">
+                <a class="way">
+                    <i class="fab fa-facebook"></i>
+                    <p>Facebook</p>
+                </a>
+                <a class="way">
+                    <i class="far fa-envelope"></i>
+                    <p>management@odoszewski.pl</p>
+                </a>
+                <a class="way">
+                    <i class="fas fa-phone"></i>
+                    <p>+48 506 577 493</p>
+                </a>
+                <a class="way">
+                    <i class="fab fa-instagram"></i>
+                    <p>Instagram</p>
+                </a>
+            </div>
+            <p class="contact__footer">Created by <a href="%">Karol Liwiński</a>.</p>
         </div>
     </section>
 
@@ -224,6 +275,7 @@
             timer = setInterval(showRemaining, 1000);
         }
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./navigation.js"></script>
 </body>
 
