--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Imie Nazwisko, Portfolio, Imie, Nazwisko, Musician">
     <meta name="description" content="Imie Nazwisko - Kompozytor, Pianista">
     <title>Musician Portfolio</title>
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/0233149bfc.js" crossorigin="anonymous"></script>
 </head>
@@ -48,7 +48,7 @@
         </section>
         <section id="sectionAboutMe" class="aboutMe">
             <h1 class="aboutMe__header">O mnie</h1>
-            <img class="aboutMe__photo" src="aboutMePhoto.jpg" alt="aboutMePhoto" />
+            <img class="aboutMe__photo" src="./photos/aboutMePhoto.jpg" alt="aboutMePhoto" />
             <p class="aboutMe__paragraf">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eu convallis risus, in sagittis sem. Donec malesuada, 
                 enim facilisis vehicula feugiat, arcu velit lacinia felis, sit amet maximus ligula felis eu nibh. Pellentesque 
@@ -162,42 +162,42 @@
         <section id="sectionProjects" class="projects">
             <h1 class="projects__header">Nagrania</h1>
             <div class="project">
-                <img src="Roxie.PNG" alt="roxie" class="project__photo" />
+                <img src="./photos/Roxie.PNG" alt="roxie" class="project__photo" />
                 <h2 class="project__title">Roxie - Bunt </br> (Vevo Live Performance)</h2>
                 <p class="project__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, nemo
                     distinctio veritatis aliquid amet ipsam voluptate quod non dolores facilis.</p>
                 <a href="#" class="project__link"><i class="fab fa-youtube"></i>YouTube</a>
             </div>
             <div class="project">
-                <img src="Druga.PNG" alt="roxie" class="project__photo" />
+                <img src="./photos/Druga.PNG" alt="roxie" class="project__photo" />
                 <h2 class="project__title">Eurovision Junior 2019</br>Life is a Game</h2>
                 <p class="project__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, nemo
                     distinctio veritatis aliquid amet ipsam voluptate quod non dolores facilis.</p>
                 <a href="#" class="project__link"><i class="fab fa-youtube"></i>YouTube</a>
             </div>
             <div class="project">
-                <img src="Trzeci.PNG" alt="roxie" class="project__photo" />
+                <img src="./photos/Trzeci.PNG" alt="roxie" class="project__photo" />
                 <h2 class="project__title">Mahmood - Soldi</br>The Voice of Poland</h2>
                 <p class="project__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, nemo
                     distinctio veritatis aliquid amet ipsam voluptate quod non dolores facilis.</p>
                 <a href="#" class="project__link"><i class="fab fa-youtube"></i>YouTube</a>
             </div>
             <div class="project">
-                <img src="Czwarty.PNG" alt="roxie" class="project__photo" />
+                <img src="./photos/Czwarty.PNG" alt="roxie" class="project__photo" />
                 <h2 class="project__title">MoowMi Janek - Widzę Cię znów</h2>
                 <p class="project__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, nemo
                     distinctio veritatis aliquid amet ipsam voluptate quod non dolores facilis.</p>
                 <a href="#" class="project__link"><i class="fab fa-youtube"></i>YouTube</a>
             </div>
             <div class="project">
-                <img src="Piate.PNG" alt="roxie" class="project__photo" />
+                <img src="./photos/Piate.PNG" alt="roxie" class="project__photo" />
                 <h2 class="project__title">Roxie - Cisza</h2>
                 <p class="project__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, nemo
                     distinctio veritatis aliquid amet ipsam voluptate quod non dolores facilis.</p>
                 <a href="#" class="project__link"><i class="fab fa-youtube"></i>YouTube</a>
             </div>
             <div class="project">
-                <img src="Szesc.PNG" alt="roxie" class="project__photo" />
+                <img src="./photos/Szesc.PNG" alt="roxie" class="project__photo" />
                 <h2 class="project__title">Hubert Jablonski - There's Nothing Holdin' Me Back</h2>
                 <p class="project__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, nemo
                     distinctio veritatis aliquid amet ipsam voluptate quod non dolores facilis.</p>
